# CXX-Design-Patterns

./: .gitignore
Adapter/: CMakeLists.txt
Adapter/lib/: CMakeLists.txt  plugs.cpp  plugs.hpp  power-socket-adapters.cpp  power-socket-adapters.hpp  power-sockets.cpp  power-sockets.hpp
Adapter/src/: CMakeLists.txt  adapter.cpp
Command/: CMakeLists.txt
Command/lib/: CMakeLists.txt  home-commands.cpp  home-commands.hpp  home-elements.cpp  home-elements.hpp  home-remote-controller.cpp  home-remote-controller.hpp
Command/src/: CMakeLists.txt  home-station.cpp
Composite/lib/: CMakeLists.txt  menus.cpp  menus.hpp  waitress.cpp  waitress.hpp
Composite/src/: CMakeLists.txt  bistro.cpp
Decorator/: CMakeLists.txt
Decorator/lib/: CMakeLists.txt  beverage-condiments.cpp  beverage-condiments.hpp  beverages.cpp  beverages.hpp
Decorator/src/: CMakeLists.txt  starbuzz.cpp
Facade/: CMakeLists.txt
Facade/lib/: CMakeLists.txt  components.cpp  components.hpp
Facade/src/: CMakeLists.txt  home-cinema.cpp
Factory/: CMakeLists.txt
Factory/lib/: CMakeLists.txt  pizza-store.cpp  pizza-store.hpp  pizza.cpp  pizza.hpp
Factory/src/: CMakeLists.txt  pizzeria.cpp
Iterator/: CMakeLists.txt
Iterator/lib/: CMakeLists.txt  menu.cpp  menu.hpp  waitress.cpp  waitress.hpp
Iterator/src/: CMakeLists.txt  bistro.cpp
Observer/: CMakeLists.txt
Observer/lib/: CMakeLists.txt  weather-displays.cpp  weather-displays.hpp  weather-station.cpp  weather-station.hpp
Observer/src/: CMakeLists.txt  weather-station.cpp
State/: CMakeLists.txt
State/lib/: CMakeLists.txt  machine.cpp  machine.hpp
State/lib/states/: has-quater-state.cpp  has-quater-state.hpp  no-quater-state.cpp  no-quater-state.hpp  sold-out-state.cpp  sold-out-state.hpp  sold-state.cpp  sold-state.hpp  state.cpp  state.hpp  winner-state.cpp  winner-state.hpp
State/src/: CMakeLists.txt  mighty-gumball.cpp
Strategy/: CMakeLists.txt
Strategy/lib/: CMakeLists.txt  behaviors.hpp  ducks.hpp
Strategy/src/: CMakeLists.txt  duckusim.cpp
TemplateMethod/: CMakeLists.txt
TemplateMethod/lib/: CMakeLists.txt  beverages.cpp  beverages.hpp
TemplateMethod/src/: CMakeLists.txt  starbuzz.cpp
